# GL_SimpleExperiment

./: .gitignore  focus.bat
batchPkg/: color.bat
cmake/: CMakeLists.txt  build.bat
m_gl/: CMakeLists.txt
m_gl/glad/glad_3.3_x64_release/include/glad/: glad.h
m_gl/glad/glad_3.3_x64_release/src/: glad.c
m_gl/glfw/glfw_3.3.8_x64_release/lib/: glfw3.lib
src/: main.cpp
src/common/: common.hpp
src/threshold/: hello_triangle.hpp  hello_windows.hpp
